# E-commerce-RAG-Assistant

./: .env.example  .gitignore  BACKEND_SPEC.md  CHROMA_MIGRATION.md  RAG面试备考文档.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: chat.py  upload.py
app/core/: errors.py  hybrid_retriever.py  intent_router.py  rag_chain.py  session.py
app/knowledge/: loader.py  splitter.py
app/schemas/: chat.py  error.py  upload.py
app/services/: bm25_store.py  embedding.py  llm.py  vector_store.py
app/tools/: order_tool.py
data/documents/policy/: doc_22cc18c14a62.txt
data/documents/product/: doc_0862e9a0cb4c.txt  doc_abca1e33fb16.txt  doc_cb218a2fb397.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: chat.ts
frontend/src/components/: ChatInput.vue  ChatMessage.vue  FileUpload.vue
frontend/src/types/: index.ts
tests/: conftest.py  test_chat.py  test_intent_router.py  test_session.py  test_upload.py
