[project]
name = "ecommerce-rag-chatbot"
version = "1.0.0"
description = "电商智能客服 RAG 系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-chroma>=1.0.0",
    "chromadb>=1.5.0",
    "openai>=1.0.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "unstructured>=0.14.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "langchain-openai",
]

[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"

[tool.pytest.ini_options]
asyncio_mode = "auto"
